--- a/Walmart/backend/vercel.json
+++ b/Walmart/backend/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
   "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
   "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
