--- a/Walmart/backend/vercel.json
+++ b/Walmart/backend/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
   "rewrites": [{ "source": "/(.*)", "destination": "/" }],
-  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }]
 }
