--- a/Walmart/backend/.env
+++ b/Walmart/backend/.env
@@ -1,5 +1,5 @@
 PORT = 8080
 
-CONNECTION_STRING = mongodb+srv://kashyapsauravgolu:walmart_password@cluster0.4nkoeq1.mongodb.net/walmart?retryWrites=true&w=majority&appName=Cluster0
+CONNECTION_STRING = mongodb+srv://kashyapsaurav531:auth@cluster0.ym5cmld.mongodb.net/walmart?retryWrites=true&w=majority&appName=Cluster0
 
 SECRET_CODE = WALMART_SHOPPING_APP
