--- a/Portfolio/portfolio/package.json
+++ b/Portfolio/portfolio/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "framer-motion": "^11.3.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
